--- a/plugin-description.html
+++ b/plugin-description.html
@@ -3,6 +3,8 @@
 <ul>
     <li>Parsing errors detection</li>
     <li>Syntax highlighting</li>
+    <li>Goto and find usage</li>
+    <li>Code completion</li>
 </ul>
 
 <p><a href="https://www.paypal.com/donate/?hosted_button_id=FVDM2Z3ESPC5Y">Donation</a></p>
