--- a/plugin-description.html
+++ b/plugin-description.html
@@ -5,6 +5,7 @@
     <li>Syntax highlighting</li>
     <li>Goto and find usage</li>
     <li>Code completion</li>
+    <li>Add new file</li>
 </ul>
 
 <p><a href="https://www.paypal.com/donate/?hosted_button_id=FVDM2Z3ESPC5Y">Donation</a></p>
